added gulp boilerplate

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-mdl"></div>
                         </div>
                         <div class="column">
+                            <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-gulp"></div>
+                        </div>
+                        <div class="column">
                             <div class="github-card" data-user="OneHunnid" data-repo="SPAKIT"></div>
                         </div>
                         <div class="column">
@@ -80,7 +83,7 @@
 
     <div class="ui inverted vertical footer segment">
         <div class="ui subheader">
-            © Taq Karim
+            <a style="padding-left: 30px;" target="_blank" href="https://twitter.com/the_taqquikarim">© Taq Karim</a>
         </div>
     </div>
     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
