--- a/index.html
+++ b/index.html
@@ -82,8 +82,20 @@
 
 
     <div class="ui inverted vertical footer segment">
-        <div class="ui subheader">
-            <a style="padding-left: 30px;" target="_blank" href="https://twitter.com/the_taqquikarim">© Taq Karim</a>
+        <div class="ui center aligned container" style="margin: 0 50px;">
+            <div class="ui stackable inverted divided grid">
+                <div class="six wide column">
+                    <small>
+                        Built by your boy
+                        <a class="footer__anch" href="http://twitter.com/the_taqquikarim" target="_blank" style="color: white; text-decoration: underline;">Taq Karim</a> with
+                        <a class="footer__anch" href="https://honey.is/" target="_blank" style="color: white; text-decoration: underline;">this</a>,
+                        <a class="footer__anch" href="http://facebook.github.io/react/" target="_blank" style="color: white; text-decoration: underline;">this</a>,
+                        <img src="images/coffee.svg" width="16" class="footer__image">,
+                        and 
+                        <img src="images/heart.svg" width="16" class="footer__image" style="position: relative; top: 3px;">
+                    </small>
+                </div>
+            </div>
         </div>
     </div>
     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
