added semantic ui boilerplate

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-mdl"></div>
                         </div>
                         <div class="column">
+                            <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-semantic"></div>
+                        </div>
+                        <div class="column">
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-gulp"></div>
                         </div>
                         <div class="column">
