--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-mdl"></div>
                         </div>
                         <div class="column">
+                            <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-semantic"></div>
+                        </div>
+                        <div class="column">
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-gulp"></div>
+                        </div>
+                        <div class="column">
+                            <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-homepage"></div>
                         </div>
                         <div class="column">
                             <div class="github-card" data-user="OneHunnid" data-repo="SPAKIT"></div>
