added a new boilerplate + some style tweaks

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-semantic"></div>
                         </div>
                         <div class="column">
+                            <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-ecma6_gulp_flux_basic"></div>
+                        </div>
+                        <div class="column">
                             <div class="github-card" data-user="FEWDMaterials" data-repo="boilerplate-gulp"></div>
                         </div>
                         <div class="column">
